<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/JDGreen"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/textbox_thing">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:id="@+id/loginText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/login_text"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/JDGreen"/>

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/textbox_thing"
                android:drawableStart="@drawable/outline_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/username_text"
                android:inputType="text"
                android:autofillHints="username"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/textbox_thing"
                android:drawableStart="@drawable/outline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/password_text"
                android:inputType="textPassword"
                android:autofillHints="password"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="40dp" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/login_text_caps"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/JDGreen"
                android:textColor="@color/JDWhite"
                app:cornerRadius="20dp"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/forgotPassText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/forgot_pass_question"
        android:textSize="14sp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_marginBottom="20dp"
        android:clickable="true"/>


</LinearLayout>