<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/JDGreen">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/textbox_thing">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:id="@+id/accRecText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/acc_rec_text"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/JDGreen"/>

            <TextView
                android:id="@+id/enterRecText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:padding="8dp"
                android:text="@string/enter_rec_email_text"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintHorizontal_bias="0.5" />

            <EditText
                android:id="@+id/recEmailTextBox"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/textbox_thing"
                android:drawableStart="@drawable/outline_email_24"
                android:drawablePadding="8dp"
                android:hint="@string/email_text"
                android:inputType="textEmailAddress"
                android:autofillHints="emailAddress"
                android:textColorHighlight="@color/cardview_dark_background"/>

            <Button
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/submit_text_caps"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/JDGreen"
                android:textColor="@color/JDWhite"
                app:cornerRadius="20dp"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>