<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/JDGreen"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/textbox_thing">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:id="@+id/emailSentText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/rec_email_sent_text"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:textColor="@color/JDGreen"/>

            <TextView
                android:id="@+id/ifValidEmailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/acc_rec_afer_text"
                android:textSize="18sp"
                android:textAlignment="center"/>

            <Button
                android:id="@+id/gotItButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/got_it_text"
                android:textSize="18sp"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/JDGreen"
                android:textColor="@color/JDWhite"
                app:cornerRadius="20dp"/>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>